# TEESimulator-RS-Online

./: .gitignore  OMEGA_INTEGRATION.md  README.md  build.gradle.kts  gradle.properties
OmegaRelay/: .gitignore  Cargo.toml  DEPLOY.md  README.md  STATUS.md
OmegaRelay/android/: BUILD_GUIDE.md  bootstrap-wrapper.ps1  build.gradle.kts  gradle.properties  settings.gradle.kts
OmegaRelay/android/daemon-core/: build.gradle.kts
OmegaRelay/android/daemon-core/src/main/kotlin/org/ommega/relay/provider/: Config.kt  Logging.kt  RelayClient.kt
OmegaRelay/android/daemon-core/src/main/kotlin/org/ommega/relay/provider/attest/: AttestationEngine.kt  AttestationExtension.kt  KeystoreEngine.kt  LeafBuilder.kt  StubEngine.kt
OmegaRelay/android/daemon-provider/: build.gradle.kts  provider.example.conf
OmegaRelay/android/daemon-provider-app/: build.gradle.kts
OmegaRelay/android/daemon-provider-app/src/main/: AndroidManifest.xml
OmegaRelay/android/daemon-provider-app/src/main/kotlin/org/ommega/relay/provider/app/: BootReceiver.kt  MainActivity.kt  Prefs.kt  RelayService.kt
OmegaRelay/android/daemon-provider-app/src/main/res/drawable/: ic_launcher_fg.xml
OmegaRelay/android/daemon-provider-app/src/main/res/layout/: activity_main.xml
OmegaRelay/android/daemon-provider-app/src/main/res/mipmap-anydpi/: ic_launcher.xml
OmegaRelay/android/daemon-provider-app/src/main/res/values/: colors.xml  strings.xml  styles.xml
OmegaRelay/android/daemon-provider-app/src/main/res/xml/: network_security_config.xml
OmegaRelay/android/daemon-provider/src/main/kotlin/org/ommega/relay/provider/: App.kt
OmegaRelay/android/daemon-provider/src/main/resources/: logback.xml
OmegaRelay/android/protocol/: build.gradle.kts
OmegaRelay/android/protocol/src/main/kotlin/org/ommega/relay/protocol/: Auth.kt  Codec.kt  Messages.kt
OmegaRelay/android/protocol/src/test/kotlin/org/ommega/relay/protocol/: CodecTest.kt
OmegaRelay/docs/: protocol-v2-rfc.md  protocol-v2-rfc.zh.md  protocol.md
OmegaRelay/module/provider/: README.md  customize.sh  daemon.sh  module.prop  package.ps1  provider.example.conf  sepolicy.rule  service.sh
OmegaRelay/module/provider/webroot/: app.js  index.html  ksu.js  style.css
OmegaRelay/protocol/: Cargo.toml
OmegaRelay/protocol/src/: auth.rs  lib.rs  messages.rs
OmegaRelay/server/: Cargo.toml  README.md  config.example.toml
OmegaRelay/server/src/: config.rs  main.rs  registry.rs  session.rs  tls.rs  ws.rs
OmegaRelay/tools/: verify_cert_sig.sh
OmegaRelay/vps/: README.md  install.sh  nginx-snippet.conf
app/: build.gradle.kts  proguard-rules.pro
gradle/: libs.versions.toml
module/: customize.sh  (+3 more)
(+12 files in other folders)
