[package]
name = "omega-server"
version.workspace = true
edition.workspace = true
description = "OmegaRelay relay server"

[[bin]]
name = "omega-server"
path = "src/main.rs"

[dependencies]
omega-protocol = { path = "../protocol" }

tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }

# For verifying TEE-signed cert chains in test harnesses (fake_external).
x509-parser = { version = "0.16", features = ["verify"] }

serde = { workspace = true }
serde_bytes = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

chrono = { workspace = true }
hex = { workspace = true }

dashmap = "6.1"
